link to call for proposal

--- a/en/index.html
+++ b/en/index.html
@@ -101,7 +101,7 @@
                             <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
                              <p class="card-text text-center mt-4 mb-4">
-                              <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposals coming soon</a>
+                              <a href="submission.html" class="btn btn-cor1 btn-lg">Call for proposals coming soon</a>
                             </p>
                           </div><!-- col12 -->
                           <div class="col-sm-12 col-md-4">
@@ -138,7 +138,7 @@
                     </div><!-- /col4-->
 
                     <div class="col-12">
-                        <p class="text-center mt-4 disabled"><a href="../en/register.html" class="btn btn-cor3">Register-me !</a></p>
+                        <p class="text-center mt-4 disabled"><a href="register.html" class="btn btn-cor3">Register-me !</a></p>
                     </div>
                 </div><!-- /row-->
                    </div>
