--- a/fr/index.html
+++ b/fr/index.html
@@ -102,7 +102,7 @@
                             <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
                         <p class="card-text text-center mt-4 mb-4">
-                            <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Bientôt l'appel à conférence...</a>
+                            <a href="../en/submission.html" class="btn btn-cor1 btn-lg">Proposez votre conférence</a>
                         </p>
                      </div>
                     <div class="col-md-4 col-sm-12">
@@ -139,9 +139,9 @@
                         <p class="h3 text-center">Rencontrez-nous joyeusement</p>
                     </div><!-- /col4-->
 
-                   <!-- <div class="col-12">
-                        <p class="text-center mt-4 disabled"><a href="#" class="btn btn-cor3">Register-me !</a></p>
-                    </div>-->
+                    <div class="col-12">
+                        <p class="text-center mt-4"><a href="../en/register.html" class="btn btn-cor3">Register-me !</a></p>
+                    </div>
                 </div><!-- /row-->
                    </div>
             </div><!-- /container-->
