--- a/fr/index.html
+++ b/fr/index.html
@@ -140,7 +140,7 @@
                     </div><!-- /col4-->
 
                     <div class="col-12">
-                        <p class="text-center mt-4"><a href="../en/register.html" class="btn btn-cor3">Register-me !</a></p>
+                        <p class="text-center mt-4"><a href="../en/register.html" class="btn btn-cor3">M'enregistrer !</a></p>
                     </div>
                 </div><!-- /row-->
                    </div>
