--- a/fr/contact.html
+++ b/fr/contact.html
@@ -109,15 +109,18 @@
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-6">
-                            <form class="mt-4" id="contactform">
+                            <form class="mt-4" action="../mailer.php" method="POST">
                                 <div class="form-group">
-                                    <input type="text" name="" id="" placeholder="First Name" class="form-control">
+                                    <input type="text" name="first_name" id="first_name" placeholder="Prénom" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="" id="" placeholder="Last Name" class="form-control">
+                                    <input type="text" name="last_name" id="last_name" placeholder="Nom" class="form-control">
+                                </div>
+                              <div class="form-group">
+                                    <input type="email" name="email" id="email" placeholder="Votre email" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your message"></textarea>
+                                    <textarea class="form-control" name="message" id="message" placeholder="Votre message"></textarea>
                                 </div>
                                 <button class="btn btn-cor5 btn-block disabled" type="submit">Envoyer</button>
                             </form>
