--- a/en/register.html
+++ b/en/register.html
@@ -82,10 +82,10 @@
           </ul>
           <ul class="navbar-nav my-2 my-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="/en/index.html">English</a>                
+              <a class="nav-link" href="index.html">English</a>                
             </li>
             <li class="nav-item">             
-              <a class="nav-link" href="/fr/index.html">French</a>            
+              <a class="nav-link" href="../fr/index.html">French</a>            
             </li>
           </ul>
         </div>
