--- a/en/submission.html
+++ b/en/submission.html
@@ -171,7 +171,7 @@
                           <h5 class="h5">Funding</h5>
                           <div class="form-check form-check-inline">
                             <input type="radio" value="reimburse" class="form-check-input" name="cost_box" id="cost_box">
-                            <label class="form-check-label" for=""> I need my travel costs to be reimbursed : <input id="costs" name="costs" type="number" placeholder=" R$, €, or US$" style="width:auto"></label>
+                            <label class="form-check-label" for=""> I need my travel costs to be reimbursed : <input id="costs" name="costs" type="number" placeholder=" €" style="width:auto"></label>
                           </div>
                           <div class="form-check form-check-inline">
                               <input type="radio" value="fund" class="form-check-input" id="cost_box" name="cost_box">
