--- a/fr/venir.html
+++ b/fr/venir.html
@@ -196,7 +196,13 @@
                   <p class="mt-4">Les Libre Graphics Meeting (LGM) est une rencontre internationale nomade annuelle autour du logiciel libre graphique.
                     Des conférences et des ateliers sont proposés sur le développement et l'utilisation avancé des logiciels libres graphiques.
                     </p>
-                </div><!-- /col12-->
+                </div>
+                
+                <div class="col-12">
+                    <p class="text-center mt-4"><a href="../en/register.html" class="btn btn-cor3">M'enregistrer !</a></p>
+                </div>
+                
+                <!-- /col12-->
 
              <!--  <div class="col-12">
                     <p class="text-center mt-4"><a href="registrer.html" class="btn btn-cor1b">Registration</a></p>
