--- a/fr/codedeconduite.html
+++ b/fr/codedeconduite.html
@@ -44,7 +44,7 @@
                 </ul>
               </li>-->
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venue</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venir</a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="venir.html">Information</a>
                     <a class="dropdown-item" href="venir.html#enregistrement">Enregistrement</a>
