--- a/fr/index.html
+++ b/fr/index.html
@@ -102,7 +102,7 @@
                             <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
                         <p class="card-text text-center mt-4 mb-4">
-                            <a href="../en/submission.html" class="btn btn-cor1 btn-lg">Proposez votre conférence</a>
+                            <a href="programme.html" class="btn btn-cor1 btn-lg">Proposez votre conférence</a>
                         </p>
                      </div>
                     <div class="col-md-4 col-sm-12">
