add google logo in Partners list, add link for each partner website

--- a/en/index.html
+++ b/en/index.html
@@ -209,19 +209,23 @@
                 </div><!-- /col12-->
 
                 <div class="col-md-3">
-                  <p><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></p>
+                  <p><a href="https://activdesign.eu/"><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
-                    <p><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></p>
+                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
-                      <p><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></p>
+                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
+                </div><!-- /col2 -->
+                
+                <div class="col-md-3">
+                  <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
-                    <p>Your organization or company ?</p>
+                  <p>Your organization or company ?</p>
                 </div><!-- /col2 -->
   
 
