--- a/fr/index.html
+++ b/fr/index.html
@@ -211,15 +211,19 @@
                 </div><!-- /col12-->
 
                 <div class="col-md-3">
-                  <p><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></p>
+                  <p><a href="https://activdesign.eu/"><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
-                    <p><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></p>
+                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
-                      <p><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></p>
+                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
+                </div><!-- /col2 -->
+                
+                <div class="col-md-3">
+                  <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
