add Sponsors page

--- a/en/index.html
+++ b/en/index.html
@@ -76,6 +76,7 @@
                   <a class="dropdown-item" href="contact.html#contact">Contact us</a>
                    <a class="dropdown-item" href="contact.html#presskit">Press Kit</a>
                    <a class="dropdown-item" href="codeofconduct.html">Code of Conduct</a>
+                    <a class="dropdown-item" href="sponsors.html">Sponsors</a>
                 </div>
               </li>
           </ul>
@@ -205,7 +206,7 @@
               <div class="row">
                 <div class="col-12">
                   <h2 class="text-center">Partners</h2>
-                  <p class="mt-4">This event is targeted at artists, developers, professionnal designers or just curious people. Please consider being a partner to support this great meeting.</p>
+                  <p class="mt-4">This event is targeted at artists, developers, professionnal designers or just curious people. Please consider being a partner or sponsor to support this great meeting.</p>
                 </div><!-- /col12-->
 
                 <div class="col-md-3">
@@ -224,8 +225,8 @@
                   <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-3">
-                  <p>Your organization or company ?</p>
+                <div class="col-md-4">
+                  <p><a href="contact.html">Your organization or company ?</a></p>
                 </div><!-- /col2 -->
   
 
