--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -95,57 +95,41 @@
 
       <main>
 
-          <header class="contactpage">
-            <div class="card bg-dark text-white">
-                 <img src="css/img/wall-175686_1920.jpg" class="card-img" alt="..." height="200">
-                    <div class="card-img-overlay">
-                        <h1 class="card-title text-center">Contact</h1>
-                    </div>
-            </div>
-          </header>
-
-          <section class="cor5">
-            <div class="container">
-              <div class="row">
-                  <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
-                      <div class="row">
-                        <div class="col-md-6">
-                            <form class="mt-4" action="../mailer.php" method="POST">
-                                <div class="form-group">
-                                    <input type="text" name="first_name" id="first_name" placeholder="First Name" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" name="last_name" id="last_name" placeholder="Last Name" class="form-control">
-                                </div>
-                               <div class="form-group">
-                                    <input type="email" name="email" id="email" placeholder="your mail" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <textarea class="form-control" name="message" id="message" placeholder="Your message"></textarea>
-                                </div>
-                                <button class="btn btn-cor5 btn-block" type="submit">Submit</button>
-                            </form>
-                        </div><!-- /col6 -->
-                        <div class="col-md-6 mt-4">
-                            <h3>Send us a message</h3>
-                            <p>If you want to help us, become volunteer, sponsor, or need extra information, please send us a message.</p>
-                        </div><!-- /col6 -->
-                    </div><!-- /row -->
-                  </article> 
-              </div><!-- /row -->
-            </div><!-- /container-->
-          </section>
-
           <section class="cor4">
               <div class="container">
                   <div class="row">
                         <div class="col-12">
-                             <h2 class="text-center" id="presskit">Press Kit</h2>
+                             <h2 class="text-center" id="presskit">Sponsors and Partners 2020</h2>
+                             
+                <p class="mt-4">This event is targeted at artists, developers, professionnal designers or just curious people. Please consider being a partner or sponsor to support this great meeting.</p>
+                </div><!-- /col12-->
 
-                             <p class="mt-4">
-                               Coming soon.
-                             </p>
-                        </div><!-- /col12-->
+                <div class="col-md-3">
+                  <p><a href="https://activdesign.eu/"><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></a></p>
+                </div><!-- /col2 -->
+
+                <div class="col-md-3">
+                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></a></p>
+                </div><!-- /col2 -->
+
+                <div class="col-md-3">
+                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
+                </div><!-- /col2 -->
+                
+                <div class="col-md-3">
+                  <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
+                </div><!-- /col2 -->
+
+
+                            <p><a href="contact.html">Contact us to add your organization or company.</a></p>
+
+                            <p class="mt-4">LGM consists of many elements, and some are more visible than others: the talks, posters, travel stipends, video documentation and this website are all concrete expressions of graphic design; while the co-creation of ideas, adminstration, coordination, organization, enthusiasm and emotional support are a little more abstract.</p>
+
+                            <p class="mt-4">All are needed and important, and the culture of collaboration through which we create all of these essential elements do not easily map back to specific sponsors, or a single scale of value.</p>
+
+                            <p class="mt-4">Therefore we want to thank all our sponsors together for their generosity in supporting all these activities, and making a commitment to supporting the libre graphics ecosystem as a whole.</p>
+
+                            <p class="mt-4">Our sponsors are all actors in this ecosystem, and each has a stake in its overall growth and well-being. If that sounds like you and your organization, please become a sponsor of the next Libre Graphics Meetings by <a href="contact.html">contacting us</a></p>
                   </div>
               </div>
           </section>
