--- a/en/venue.html
+++ b/en/venue.html
@@ -77,6 +77,7 @@
                    <a class="dropdown-item" href="contact.html">Contact us</a>
                    <a class="dropdown-item" href="contact.html#presskit">Press Kit</a>
                    <a class="dropdown-item" href="codeofconduct.html">Code of Conduct</a>
+                   <a class="dropdown-item" href="sponsors.html">Sponsors</a>
                 </div>
               </li>
           </ul>
