--- a/fr/codedeconduite.html
+++ b/fr/codedeconduite.html
@@ -77,6 +77,7 @@
                          <a class="dropdown-item" href="contact.html">Contact</a>
                          <a class="dropdown-item" href="contact.html#presskit">Communication</a>
                          <a class="dropdown-item" href="codeodeconduite.html">Code de Conduite</a>
+                         <a class="dropdown-item" href="../en/sponsors.html">Sponsors</a>
                       </div>
                     </li>
                 </ul>
