--- a/fr/index.html
+++ b/fr/index.html
@@ -77,6 +77,7 @@
                   <a class="dropdown-item" href="contact.html#contact">Contact</a>
                    <a class="dropdown-item" href="contact.html#presskit">Communication</a>
                    <a class="dropdown-item" href="codedeconduite.html">Code de conduite</a>
+                   <a class="dropdown-item" href="../en/sponsors.html">Sponsors</a>
                 </div>
               </li>
           </ul>
@@ -206,8 +207,8 @@
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h2 class="text-center">Partenaire</h2>
-                  <p class="mt-4">Cet événement réunis aussi bien des artistes, développeurs, professionnels de l'image que de simple curieux. Si cela vous tente de devenir partenaire de l'événement, entrez en contact avec nous.</p>
+                  <h2 class="text-center">Partenaires</h2>
+                  <p class="mt-4">Cet événement réunis aussi bien des artistes, développeurs, professionnels de l'image que de simple curieux. Si cela vous tente de devenir partenaire ou un sponsor de l'événement, entrez en contact avec nous.</p>
                 </div><!-- /col12-->
 
                 <div class="col-md-3">
@@ -226,8 +227,8 @@
                   <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-3">
-                    <p>Le votre ?</p>
+                <div class="col-md-4">
+                    <p><a href="contact.html">Votre organisation ou compagnie ?</a></p>
                 </div><!-- /col2 -->
   
 
