--- a/fr/programme.html
+++ b/fr/programme.html
@@ -73,19 +73,12 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a class="" href="/en/contact.html#contact">Contact us</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="" href="/en/contact.html#presskit">Press Kit</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="" href="/en/codeofconduct.html">Code of Conduct</a>
-                        </li>
-                </ul>
-                </ul>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                   <a class="dropdown-item" href="contact.html">Contact</a>
+                   <a class="dropdown-item" href="contact.html#communication">Communication</a>
+                   <a class="dropdown-item" href="#">Code de conduite</a>
+                   <a class="dropdown-item" href="../en/sponsors.html">Sponsors</a>
+                </div>
               </li>
           </ul>
           <ul class="navbar-nav my-2 my-lg-0">
