--- a/fr/venir.html
+++ b/fr/venir.html
@@ -77,6 +77,7 @@
                    <a class="dropdown-item" href="contact.html">Contact</a>
                    <a class="dropdown-item" href="contact.html#communication">Communication</a>
                    <a class="dropdown-item" href="#">Code de conduite</a>
+                   <a class="dropdown-item" href="../en/sponsors.html">Sponsors</a>
                 </div>
               </li>
           </ul>
