--- a/en/index.html
+++ b/en/index.html
@@ -226,7 +226,7 @@
                 </div><!-- /col2 -->
 
                 <div class="col-md-4">
-                  <p><a href="contact.html">Your organization or company ?</a></p>
+                  <p><a href="sponsors.html">Your organization or company ?</a></p>
                 </div><!-- /col2 -->
   
 
