--- a/fr/index.html
+++ b/fr/index.html
@@ -228,7 +228,7 @@
                 </div><!-- /col2 -->
 
                 <div class="col-md-4">
-                    <p><a href="contact.html">Votre organisation ou compagnie ?</a></p>
+                    <p><a href="../en/sponsors.html">Votre organisation ou compagnie ?</a></p>
                 </div><!-- /col2 -->
   
 
