Update index.html part sponsor

--- a/en/index.html
+++ b/en/index.html
@@ -139,7 +139,7 @@
                     </div><!-- /col4-->
 
                     <div class="col-12">
-                        <p class="text-center mt-4 disabled"><a href="register.html" class="btn btn-cor3">Register-me !</a></p>
+                        <p class="text-center mt-4"><a href="register.html" class="btn btn-cor3 btn-lg">Register-me !</a></p>
                     </div>
                 </div><!-- /row-->
                    </div>
@@ -225,9 +225,13 @@
                   <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-4">
-                  <p><a href="sponsors.html">Your organization or company ?</a></p>
+                <div class="col-md-12">
+                  <p class="text-center"><a href="sponsors.html" class="inwhiteklink">Your organization or company ?</a></p>
                 </div><!-- /col2 -->
+
+                <div class="col-12">
+                  <p class="text-center mt-4"><a href="sponsors.html" class="btn btn-cor5">See Sponsors page</a></p>
+              </div>
   
 
 
