add img contact page

--- a/en/contact.html
+++ b/en/contact.html
@@ -97,7 +97,7 @@
 
           <header class="contactpage">
             <div class="card bg-dark text-white">
-                 <img src="css/img/wall-175686_1920.jpg" class="card-img" alt="..." height="200">
+                 <img src="../css/img/contact-Livio-Fania.png" class="card-img" alt="..." height="200">
                     <div class="card-img-overlay">
                         <h1 class="card-title text-center">Contact</h1>
                     </div>
