add img venue part of index

--- a/en/index.html
+++ b/en/index.html
@@ -151,8 +151,17 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="text-center">Venue</h2>
-                        <p class="mt-4"> LGM 2020 will take place in several venues with large, medium, and small spaces. We welcome lectures, workshops and other interactive formats.</p>
+                        <div class="row">
+                            <div class="col-sm-6">
+                          <p class="text-center"><img src="../css/img/Livio-Fania-image01.png" alt="" class="img-fluid"></p></div>
+                          <div class="col-sm-6">
+                          <p class="text-center"><img src="../css/img/Livio-Fania-image02.png" alt="" class="img-fluid"></p>
+                        </div>
+                          <p class="mt-4"> LGM 2020 will take place in several venues with large, medium, and small spaces. We welcome lectures, workshops and other interactive formats.</p>
+                        </div>
                     </div><!-- /col12-->
+
+                   
 
                     <div class="col-md-4">
                         <div class="box1 mb-4">
