update program for img

--- a/en/program.html
+++ b/en/program.html
@@ -103,6 +103,11 @@
                         <p class="card-text text-center mt-4 mb-4">
                               <a href="submission.html" class="btn btn-cor3 btn-lg">Submit your proposals</a>
                         </p>
+                      </div>
+                      <div class="col-6">
+                        <p><img src="../css/img/programme-Livio-Fania.png" class="img-fluid"></p>
+                      </div>
+                      <div class="col-6">
                       
                         <p>The 2020 Libre Graphics Meeting (LGM) will take place from Tuesday May 26th to Friday May 29th in Rennes, France. This annual gathering is an opportunity for teams, contributors and users involved in Libre Graphics to work together, share experiences, and hear new and inspiring ideas. By Libre Graphics we mean “Free, Libre and Open Source tools for creative uses”. LGM is not just about software, but extends to standards and file formats used in creative works. Participants in LGM are people from around the world who are passionate about Free/Libre tools and their creative applications, including developers, designers, artists, academics, and activists.</p>
 
@@ -124,6 +129,8 @@
                         <li>Technical presentations and workshops for developers</li>
                         <li>Showcases of excellent work made using Libre Graphics tools</li>
                         </ul>
+                      </div>
+                      <div class="col-12">
 
                         <h3>Formats</h3>
 
