add img venue page

--- a/en/venue.html
+++ b/en/venue.html
@@ -202,6 +202,11 @@
               <div class="row">
                 <div class="col-12">
                   <h2 class="text-center" id="registration">Participate !</h2>
+                </div>
+                <div class="col-6">
+                  <p class="text-center"><img src="../css/img/world_cafe.png" class="img-fluid" alt=""></p>
+                </div>
+                <div class="col-6">
                   <p class="mt-4">The Libre Graphics Meeting (LGM) is an annual international convention for the discussion of free and open source graphics software.
                   You will assist to conferences and workshops about the free software graphics projects and learn advanced usage.
                   And you will meet face to face all the marvelous people creating awesome software you already use or will use soon.</p>
@@ -268,6 +273,11 @@
                   <div class="row">
                       <div class="col-12">
                           <h2 class="text-center" id="travel">Travel</h2>
+                      </div>
+                      <div class="col-6">
+                        <p class="mt-4"><img src="../css/img/ballon_Livio_Fania.jpg" class="img-fluid" alt=""></p>
+                      </div>
+                      <div class="col-6">
                           <p class="mt-4">Rennes has an international airport. Most of the local fly are going to or coming from Paris. You can also take the train. There is a high speed line from Paris (TGV), which takes 1h30. There are several train stations in Paris, keep in mind that the TGV going to Rennes starts from the train station Gare Montparnasse. You can also choose to come by car or by bus.</p>
 
                           <p><a class="indarklink" href="contact.html#contact">Contact us</a> if you need some information.</p>
