--- a/en/venue.html
+++ b/en/venue.html
@@ -210,19 +210,8 @@
                   <p class="mt-4">The Libre Graphics Meeting (LGM) is an annual international convention for the discussion of free and open source graphics software.
                   You will assist to conferences and workshops about the free software graphics projects and learn advanced usage.
                   And you will meet face to face all the marvelous people creating awesome software you already use or will use soon.</p>
+                  <p class="text-center mt-4"><a href="register.html" class="btn btn-cor3">Register-me !</a></p>
                 </div>
-                
-                <div class="col-12">
-                    <p class="text-center mt-4 disabled"><a href="register.html" class="btn btn-cor3">Register-me !</a></p>
-                </div>
-                
-                <!-- /col12-->
-
-               <!--  <div class="col-12">
-                    <p class="text-center mt-4"><a href="registrer.html" class="btn btn-cor1b">Registration</a></p>
-                </div> /col12 -->
-
-
               </div><!-- /row -->
             </div><!-- /container-->
           </section>
