add KDE e.V. to the list of Partners

--- a/fr/index.html
+++ b/fr/index.html
@@ -222,16 +222,22 @@
                 <div class="col-md-3">
                   <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
                 </div><!-- /col2 -->
-                
+
                 <div class="col-md-3">
                   <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-4">
-                    <p><a href="../en/sponsors.html">Votre organisation ou compagnie ?</a></p>
+                <div class="col-md-3">
+                  <p><a href="https://ev.kde.org/"><img class="img-fluid" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
                 </div><!-- /col2 -->
-  
 
+                <div class="col-md-12">
+                  <p class="text-center"><a href="../en/sponsors.html" class="inwhiteklink">Votre organisation ou compagnie ?</a></p>
+                </div><!-- /col2 -->
+
+                <div class="col-12">
+                  <p class="text-center mt-4"><a href="../en/sponsors.html" class="btn btn-cor5">Voir la page des Sponsors</a></p>
+                </div>
 
               </div><!-- /row -->
             </div><!-- /container-->
