--- a/en/index.html
+++ b/en/index.html
@@ -229,9 +229,13 @@
                 <div class="col-md-3">
                   <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
                 </div><!-- /col2 -->
-                
+
                 <div class="col-md-3">
                   <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
+                </div><!-- /col2 -->
+
+                <div class="col-md-3">
+                  <p><a href="https://ev.kde.org/"><img class="img-fluid" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-12">
@@ -240,9 +244,7 @@
 
                 <div class="col-12">
                   <p class="text-center mt-4"><a href="sponsors.html" class="btn btn-cor5">See Sponsors page</a></p>
-              </div>
-  
-
+                </div>
 
               </div><!-- /row -->
             </div><!-- /container-->
