--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -115,9 +115,13 @@
                             <div class="col-md-3 mt-4">
                             <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
                             </div><!-- /col2 -->
-                            
+
                             <div class="col-md-3 mt-4">
                             <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
+                            </div><!-- /col2 -->
+
+                            <div class="col-md-3 mt-4">
+                            <p><a href="https://ev.kde.org/"><img class="img-fluid" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
                             </div><!-- /col2 -->
                         </div><!-- /row-->
                     </div><!-- /container-->
