update css for sponsors logos
adjust the spacing of logos to comply with google requirement:
"The amount of clear space around our logo should be equal to or greater
than the height of the “G” in Google."

change to 3 logos per line as it looks better with the spacing

center images

--- a/fr/index.html
+++ b/fr/index.html
@@ -211,24 +211,24 @@
                   <p class="mt-4">Cet événement réunis aussi bien des artistes, développeurs, professionnels de l'image que de simple curieux. Si cela vous tente de devenir partenaire ou un sponsor de l'événement, entrez en contact avec nous.</p>
                 </div><!-- /col12-->
 
-                <div class="col-md-3">
-                  <p><a href="https://activdesign.eu/"><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></a></p>
+                <div class="col-md-4">
+                  <p><a href="https://activdesign.eu/"><img class="img-fluid sponsors" src="../css/img/logopartner1.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-3">
-                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></a></p>
+                <div class="col-md-4">
+                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid sponsors" src="../css/img/jardinmoderne.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-3">
-                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
+                <div class="col-md-4">
+                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid sponsors" src="../css/img/logo-istic.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-3">
-                  <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
+                <div class="col-md-4">
+                  <p><a href="https://fonts.google.com/about"><img class="img-fluid sponsors" src="../css/img/google-2.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
-                <div class="col-md-3">
-                  <p><a href="https://ev.kde.org/"><img class="img-fluid" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
+                <div class="col-md-4">
+                  <p><a href="https://ev.kde.org/"><img class="img-fluid sponsors" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-12">
