--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -104,24 +104,24 @@
                             <p class="mt-4">This event is targeted at artists, developers, professionnal designers or just curious people. Please consider being a partner or sponsor to support this great meeting.</p>
                             </div><!-- /col12-->
 
-                            <div class="col-md-3 mt-4">
-                            <p><a href="https://activdesign.eu/"><img class="img-fluid" src="../css/img/logopartner1.png" alt=""></a></p>
+                            <div class="col-md-4 mt-4">
+                            <p><a href="https://activdesign.eu/"><img class="img-fluid sponsors" src="../css/img/logopartner1.png" alt=""></a></p>
                             </div><!-- /col2 -->
 
-                            <div class="col-md-3 mt-4">
-                            <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid" src="../css/img/jardinmoderne.png" alt=""></a></p>
+                            <div class="col-md-4 mt-4">
+                            <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid sponsors" src="../css/img/jardinmoderne.png" alt=""></a></p>
                             </div><!-- /col2 -->
 
-                            <div class="col-md-3 mt-4">
-                            <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid" src="../css/img/logo-istic.png" alt=""></a></p>
+                            <div class="col-md-4 mt-4">
+                            <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid sponsors" src="../css/img/logo-istic.png" alt=""></a></p>
                             </div><!-- /col2 -->
 
-                            <div class="col-md-3 mt-4">
-                            <p><a href="https://fonts.google.com/about"><img class="img-fluid" src="../css/img/google-2.png" alt=""></a></p>
+                            <div class="col-md-4 mt-4">
+                            <p><a href="https://fonts.google.com/about"><img class="img-fluid sponsors" src="../css/img/google-2.png" alt=""></a></p>
                             </div><!-- /col2 -->
 
-                            <div class="col-md-3 mt-4">
-                            <p><a href="https://ev.kde.org/"><img class="img-fluid" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
+                            <div class="col-md-4 mt-4">
+                            <p><a href="https://ev.kde.org/"><img class="img-fluid sponsors" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
                             </div><!-- /col2 -->
                         </div><!-- /row-->
                     </div><!-- /container-->
