update contact page fr

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -96,13 +96,13 @@
       <main>
 
           <header class="contactpage">
-            <div class="card bg-dark text-white">
-                 <img src="css/img/wall-175686_1920.jpg" class="card-img" alt="..." height="200">
-                    <div class="card-img-overlay">
-                        <h1 class="card-title text-center">Contact</h1>
-                    </div>
-            </div>
-          </header>
+              <div class="card bg-dark text-white">
+                   <img src="../css/img/contact-Livio-Fania.png" class="card-img" alt="..." height="200">
+                      <div class="card-img-overlay">
+                          <h1 class="card-title text-center">Contact</h1>
+                      </div>
+              </div>
+            </header>
 
           <section class="cor5">
             <div class="container">
@@ -158,22 +158,7 @@
               <div class="col-md-4 text-white">
                 <p class="footerContent">Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
-  <!--
-              <div class="col-md-4">
-                  <ul>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                  </ul>
-                </div> /col3 -->
-  <!--
-                <div class="col-md-4">
-                    <ul>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                    </ul>
-                  </div> /col3 -->
+
             </div><!-- /row -->
           </div><!-- /container-->
   
