--- a/fr/index.html
+++ b/fr/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
           <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
-          LGM 2020
+         
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -153,6 +153,14 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="text-center">Lieu</h2>
+                        <div class="row">
+                          <div class="col-sm-6">
+                        <p class="text-center"><img src="../css/img/Livio-Fania-image01.png" alt="" class="img-fluid"></p>
+                      <p>by Livio Fania</p></div>
+                        <div class="col-sm-6">
+                        <p class="text-center"><img src="../css/img/Livio-Fania-image02.png" alt="" class="img-fluid"></p>
+                      </div>
+                    </div>
                         <p class="mt-4"> LGM 2020 sera présent sur plusieurs lieux dans la ville de Rennes. Il y aura des conférences, des ateliers et d'autres formats de rencontre.</p>
                     </div><!-- /col12-->
 
