Update programme fr

--- a/fr/programme.html
+++ b/fr/programme.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
           <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
-          LGM 2020
+          
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -103,7 +103,12 @@
                         <p class="card-text text-center mt-4 mb-4">
                               <a href="../en/submission.html" class="btn btn-cor3 btn-lg">Proposez votre conférence</a>
                         </p>
-                      
+                      </div>
+                      <div class="col-6">
+                          <p><img src="../css/img/programme-Livio-Fania.png" class="img-fluid"></p>
+                          <p>by : Livio Fania</p>
+                        </div>
+                        <div class="col-6">
                         <p>Le Libre Graphics Meeting 2020 (LGM) se déroulera du Mardi 26 Mai au Vendredi 29 Mai à Rennes, France. Cette réunion annuelle est une opportunité pour les équipes, les contributeurs et les utilisateurs impliqués dans les logiciels de graphisme libres de travailler ensemble, partager leurs expériences, et découvrir de nouvelles inspirations. Sous le terme "Libre Graphics", nous entendons "les outils Libres et Open-Source pour une utilisation créative". Le LGM ne concerne pas seulement les applications, il s'étend aux standards et formats de fichiers utilisés pour les travaux créatifs. Les participants du LGM sont des gens du monde entier passionnés par les outils Libres et leurs applications créatives, incluant développeurs, designeurs, artistes, académiciens et activistes.</p>
 
 
@@ -112,6 +117,9 @@
                         <p>Nous accueillons les présentations, ateliers et réunions de travail. Le thème principal cette année est "Faire Avancer Les Choses", ce qui inclut les présentations incitant de nouveaux contributeurs à participer au développement, et les ateliers productifs pour l'amélioration des logiciels. La langue attendue pour les présentations et ateliers est l'anglais.</p>
 
                         <p>"Faire Avancer Les Choses" ici signifie: expliquez comment vous procédez pour attirer de nouveaux contributeurs, comment vous gérez les tâches de développement, corrigez les bugs, dans quelles directions vous souhaitez mener votre projet, et la manière dont vous interragissez pour accomplir tout cela. Vous pouvez éventuellement mentionner des idées que vous n'avez pas encore implémentées. Cela signifie également de quelle manière vous partagez vos idées et méthodes de travail avec les autres.</p>
+                      </div>
+
+                      <div class="col-6">
 
 
                         <h3>Programme principal</h3>
@@ -138,6 +146,11 @@
                         <h3>Détails pour les propositions</h3>
 
                         <p>La date limite pour les propositions est le 17 Février 2020. Les propositions sélectionnées seront notifiées par email avant la fin du mois de Février. Après cette date, vous aurez toujours la possibilité de proposer une présentation éclair durant l'événement.</p>
+                      </div>
+                      <div class="col-6">
+                          <p><img src="../css/img/table-ronde-Livio-Fania.png" alt="" class="img-fluid"></p>
+                          <p>by : Livio Fania</p>
+                        </div>
 
 
                         <h3>State of Libre Graphics</h3>
