maj Temoignange fr

--- a/fr/temoingnage.html
+++ b/fr/temoingnage.html
@@ -13,7 +13,7 @@
     <!-- Css custom -->
     <link rel="stylesheet" href="../css/lgm20.css" />
 
-    <title>Little interview</title>
+    <title>Petit interview</title>
   </head>
   <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
